feature - tela de cadastro de sessões

--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   },
   "dependencies": {
     "chart.js": "^2.7.2",
+    "element-ui": "^2.4.9",
     "es6-promise": "^4.2.4",
     "vue": "^2.5.17",
     "vue-chartjs": "^3.4.0",
-    "vue-i18n": "^8.0.0",
+    "vue-i18n": "^8.3.0",
     "vue-router": "^3.0.1",
     "vue2-transitions": "^0.2.3"
   },
