--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue": "^2.5.17",
     "vue-chartjs": "^3.4.0",
     "vue-i18n": "^8.3.0",
+    "vue-notification": "^1.3.13",
     "vue-router": "^3.0.1",
     "vue2-transitions": "^0.2.3"
   },
